test/puzzles/deitz/puzzle071108.good
puzzle071108.chpl:1: error: Ranges defined using bounds of type 'range(int(64),bounded,false)..int(64)' are not currently supported
